package com.carpoolapp.carpoolService.models.enums;

public enum FareStatus {
    PENDING,
    COMPLETED
}
